--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "faker": "^4.1.0",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.13.14",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
