--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "express": "^4.18.1",
     "faker": "^4.1.0",
-    "mongoose": "^5.13.14",
-    "react": "^18.2.0"
+    "jsonwebtoken": "^8.5.1",
+    "apollo-server-express": "^3.6.1",
+    "express": "^4.17.2",
+    "graphql": "^16.2.0",
+    "mongoose": "^6.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
